--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <h1>This is first level heading</h1>
-    <h2>This is first level heading</h2>
+    <h2>This is second level heading</h2>
     <h3>This is first level heading</h3>
     <h4>This is first level heading</h4>
     <h5>This is first level heading</h5>
     <h6>This is first level heading</h6>
    
      
-        <p>Inside this p <span class="strong">  there is a strong text</span> as u can see </p> 
-        <p>Inside this p <span class="italic">This is emphasized text</span> as u can see </p>
+        <p>Inside this p <p class="strong">  there is a strong text</p> as u can see </p> 
+        <p>Inside this p <p class="italic">This is emphasized text</p> as u can see </p>
         <p>Inside this p <span class="marked"> there is a marked text</span> as u can see </p> 
         <p>Inside this p <span class="small"> there is a small text</span> as u can see </p> 
         <p>Inside this p <span class="overlined"> there is a overlined text</span> as u can see </p> 
